[FIX] menu gap

--- a/app/assets/styles/style-mobile.css
+++ b/app/assets/styles/style-mobile.css
@@ -35,15 +35,14 @@
     grid-column: 1;
     grid-row: 1;
   }
-
-  .menu {
+  .sidebar {
     position: relative;
     top: 0;
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 1 / 2;
     margin-top: 20px;
-  }
 
+  }
   /* Hide menu for mobile articles */
   .body-article .menu {
     display: none;
