--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -23,10 +23,7 @@ body {
 }
 
 .logo {
-  grid-column: 1;
-  position: fixed;
   width: 205px;
-  top: 8vh;
 }
 
 .logo img {
@@ -35,11 +32,13 @@ body {
 
 .menu {
   grid-column: 1;
-  position: fixed;
-  top: 22vh;
   line-height: 24px;
+  margin-top: 40px;
 }
-
+.sidebar {
+  position: fixed;
+  top: 8vh;
+}
 main {
   grid-column: 2;
   padding-right: 8%;
